Fix long running process from not showing right away

--- a/web/war/src/main/webapp/less/activity/activity.less
+++ b/web/war/src/main/webapp/less/activity/activity.less
@@ -110,6 +110,10 @@ width: 25em;
               }
             }
           }
+
+          .loading + .progress {
+            margin-right: 45px;
+          }
         }
 
         .progress-description {
