--- a/web/war/src/main/webapp/less/util/button-loading.less
+++ b/web/war/src/main/webapp/less/util/button-loading.less
@@ -15,7 +15,8 @@ button, .btn {
       display: block;
       position: absolute;
       left: -20px;
-      top: 0.7ex;
+      top: 50%;
+      margin-top: -8px;
       content: '';
     }
   }
